apps/booklore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  namespace: books
  labels:
    app: booklore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: booklore/booklore:v1.18.5
          ports:
            - containerPort: 6060
          resources:
            requests:
              cpu: 25m
              memory: 933Mi
            limits:
              cpu: 25m
              memory: 1136Mi
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /books
              name: books
            - mountPath: /bookdrop
              name: bookdrop
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: booklore-data
        - name: books
          persistentVolumeClaim:
            claimName: booklore-books
        - name: bookdrop
          persistentVolumeClaim:
            claimName: booklore-bookdrop
