apps/booklore/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booklore
  namespace: books
spec:
  hostnames:
    - booklore.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: booklore
          port: 6060
